--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             padding: 0; transition: background 0.4s ease, padding 0.4s ease, backdrop-filter 0.4s ease;
         }
         body.show-pills .widget-pill {
-            background: rgba(0,0,0,0.35);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
+            background: rgba(0,0,0,0.55);
             padding: 10px 20px;
             border: 1px solid rgba(255,255,255,0.08);
         }
@@ -56,8 +54,8 @@
         body { animation: pageEntrance 1.5s var(--slow-ease) forwards; opacity: 0; }
 
         @keyframes pageEntrance {
-            from { opacity: 0; transform: scale(1.03); filter: blur(5px); }
-            to   { opacity: 1; transform: scale(1);    filter: blur(0px); }
+            from { opacity: 0; }
+            to   { opacity: 1; }
         }
 
         #bg-layer {
@@ -72,20 +70,19 @@
         .widget {
             position: fixed;
             display: flex; justify-content: center; align-items: center;
-            color: var(--accent); filter: var(--widget-shadow);
+            color: var(--accent);
             pointer-events: all;
             cursor: grab;
             user-select: none; -webkit-user-select: none;
-            /* spring snap animation */
-            transition: left 0.5s cubic-bezier(0.34, 1.56, 0.64, 1),
-                        top  0.5s cubic-bezier(0.34, 1.56, 0.64, 1),
-                        opacity 0.4s ease, transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
+            will-change: transform;
+            /* only animate transform — left/top are set instantly, no layout cost */
+            transition: transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1),
+                        opacity 0.4s ease;
         }
-        .widget:hover { filter: var(--widget-shadow) brightness(1.08); }
         .widget.dragging {
             transition: opacity 0.15s ease;
             cursor: grabbing; z-index: 500;
-            opacity: 0.8;
+            opacity: 0.85;
         }
         @keyframes wiggle {
             0%,100% { transform: translate(-50%,-50%) rotate(0deg)    scale(var(--wmx,1), var(--ws,1)); }
@@ -96,17 +93,19 @@
 
         /* snap ghosts removed — grid is invisible, snapping still works */
 
-        /* ── ACCENT TRANSITION ── */
-        * { transition: color 0.6s ease, border-color 0.6s ease, background-color 0.6s ease, box-shadow 0.6s ease; }
+        /* ── ACCENT TRANSITION — only on specific properties, not everything ── */
+        .widget-pill, #nav-trigger, #fullscreen-btn, .ios-switch, .status-tag, .reset-link, .update-btn {
+            transition: color 0.6s ease, border-color 0.6s ease, background-color 0.6s ease, box-shadow 0.6s ease;
+        }
         /* Override for elements that need faster or no color transition */
         .widget, #clock, #date, #temp, #battery, .np-btn, input, button { transition: none; }
-        .widget { transition: left 0.5s cubic-bezier(0.34,1.56,0.64,1), top 0.5s cubic-bezier(0.34,1.56,0.64,1), opacity 0.4s ease, transform 0.5s cubic-bezier(0.34,1.56,0.64,1); }
+        .widget { transition: transform 0.5s cubic-bezier(0.34,1.56,0.64,1), opacity 0.4s ease; }
         :root { --accent-transition: 0.8s ease; }
 
         /* ── WIDGET ENTRANCE ── */
         @keyframes widgetIn {
-            from { opacity: 0; transform: translate(-50%,-50%) scale(0.88); filter: blur(4px); }
-            to   { opacity: 1; transform: translate(-50%,-50%) scale(var(--wmx,1), var(--ws,1)); filter: blur(0); }
+            from { opacity: 0; transform: translate(-50%,-50%) scale(0.88); }
+            to   { opacity: 1; transform: translate(-50%,-50%) scale(var(--wmx,1), var(--ws,1)); }
         }
         .widget.entering { animation: widgetIn 0.5s cubic-bezier(0.34,1.56,0.64,1) forwards; }
 
@@ -172,8 +171,8 @@
         .a-face { fill: none; stroke: var(--accent); stroke-width: 1.5; opacity: 0.2; }
         .a-tick { stroke: var(--accent); stroke-width: 1.5; opacity: 0.4; }
         .a-tick-major { stroke: var(--accent); stroke-width: 3; opacity: 0.7; }
-        .a-hour { stroke: var(--accent); stroke-width: 5; stroke-linecap: round; filter: drop-shadow(0 0 6px var(--accent)); }
-        .a-min  { stroke: var(--accent); stroke-width: 3; stroke-linecap: round; filter: drop-shadow(0 0 4px var(--accent)); }
+        .a-hour { stroke: var(--accent); stroke-width: 5; stroke-linecap: round; }
+        .a-min  { stroke: var(--accent); stroke-width: 3; stroke-linecap: round; }
         .a-sec  { stroke: #fff; stroke-width: 1.5; stroke-linecap: round; }
         .a-center { fill: var(--accent); }
 
@@ -207,7 +206,8 @@
         /* ── NAV ── */
         #nav-trigger {
             position: absolute; bottom: 40px; right: 40px; width: 65px; height: 65px;
-            background: rgba(255,255,255,0.1); backdrop-filter: blur(15px);
+            background: rgba(30,30,30,0.85); backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
             border: 1px solid rgba(255,255,255,0.2); border-radius: 50%;
             display: flex; justify-content: center; align-items: center;
             z-index: 1000; cursor: pointer;
@@ -215,25 +215,26 @@
             opacity: 0.6; color: #fff;
         }
         #nav-ghost-zone { position: absolute; bottom: 0; right: 0; width: 150px; height: 150px; z-index: 999; }
-        #nav-trigger:hover, #nav-trigger.active-ui { opacity: 1 !important; transform: scale(1.1) rotate(15deg); background: rgba(255,255,255,0.2); border-color: var(--accent); box-shadow: 0 0 20px rgba(255,255,255,0.1); }
+        #nav-trigger:hover, #nav-trigger.active-ui { opacity: 1 !important; transform: scale(1.1) rotate(15deg); background: rgba(50,50,50,0.9); border-color: var(--accent); }
 
         /* ── FULLSCREEN BUTTON ── */
         #fullscreen-btn {
             position: absolute; bottom: 40px; left: 40px;
             width: 44px; height: 44px;
-            background: rgba(255,255,255,0.07); backdrop-filter: blur(15px);
+            background: rgba(30,30,30,0.7); backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
             border: 1px solid rgba(255,255,255,0.15); border-radius: 50%;
             display: flex; justify-content: center; align-items: center;
             z-index: 1000; cursor: pointer; color: #fff;
             transition: opacity 0.8s var(--smooth-ease), transform 0.3s var(--smooth-ease), background 0.3s, border-color 0.3s;
             opacity: 0;
         }
-        #fullscreen-btn:hover { opacity: 1 !important; background: rgba(255,255,255,0.15); border-color: var(--accent); transform: scale(1.1); }
+        #fullscreen-btn:hover { opacity: 1 !important; background: rgba(50,50,50,0.9); border-color: var(--accent); transform: scale(1.1); }
 
         /* ── KEYBOARD SHORTCUT TOAST ── */
         #kb-toast {
             position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%) translateY(20px);
-            background: rgba(20,20,20,0.92); backdrop-filter: blur(20px);
+            background: rgba(20,20,20,0.95);
             border: 1px solid rgba(255,255,255,0.1); border-radius: 14px;
             padding: 10px 18px; font-size: 0.7rem; letter-spacing: 1px;
             color: rgba(255,255,255,0.6); z-index: 4000; pointer-events: none;
@@ -253,7 +254,7 @@
         /* ── SIDE PANEL ── */
         #side-panel {
             position: fixed; right: -380px; top: 0; bottom: 0; width: 360px;
-            background: rgba(10,10,10,0.98); backdrop-filter: blur(60px);
+            background: rgba(12,12,12,0.99);
             padding: 40px 25px;
             transition: right 0.4s var(--smooth-ease);
             z-index: 2000; overflow-y: auto;
@@ -2547,13 +2548,19 @@ function startDrag(key, el, startEvent, isTouch, alreadyActivated = false) {
     if (!state.widgetPos) state.widgetPos = JSON.parse(JSON.stringify(DEFAULT_POS));
     const origPos = { ...state.widgetPos[key] };
     let moved = alreadyActivated;
-    let curPxX = origPos.x / 100 * window.innerWidth;
-    let curPxY = origPos.y / 100 * window.innerHeight;
 
-    if (alreadyActivated) {
-        curPxX = startX;
-        curPxY = startY;
-    }
+    // Anchor the left/top at start position — only transform moves during drag
+    const anchorX = origPos.x / 100 * window.innerWidth;
+    const anchorY = origPos.y / 100 * window.innerHeight;
+    el.style.left = origPos.x + '%';
+    el.style.top  = origPos.y + '%';
+
+    const sx = state.mirrored ? -state.scale : state.scale;
+    el.style.setProperty('--wmx', sx);
+    el.style.setProperty('--ws',  state.scale);
+
+    let curPxX = anchorX;
+    let curPxY = anchorY;
 
     const onMove = (ev) => {
         if (isTouch) ev.preventDefault();
@@ -2567,17 +2574,14 @@ function startDrag(key, el, startEvent, isTouch, alreadyActivated = false) {
             showGhosts();
         }
 
-        curPxX = Math.min(window.innerWidth  * 0.95, Math.max(window.innerWidth  * 0.05, (origPos.x / 100 * window.innerWidth)  + dx));
-        curPxY = Math.min(window.innerHeight * 0.95, Math.max(window.innerHeight * 0.05, (origPos.y / 100 * window.innerHeight) + dy));
+        curPxX = Math.min(window.innerWidth  * 0.95, Math.max(window.innerWidth  * 0.05, anchorX + dx));
+        curPxY = Math.min(window.innerHeight * 0.95, Math.max(window.innerHeight * 0.05, anchorY + dy));
 
+        // Move via transform only — zero layout cost, pure GPU composite
+        const offsetX = curPxX - anchorX;
+        const offsetY = curPxY - anchorY;
         el.style.transition = 'opacity 0.15s ease';
-        el.style.left = (curPxX / window.innerWidth  * 100) + '%';
-        el.style.top  = (curPxY / window.innerHeight * 100) + '%';
-        // Always re-apply transform during drag to prevent flip state from resetting
-        const _sx = state.mirrored ? -state.scale : state.scale;
-        el.style.setProperty('--wmx', _sx);
-        el.style.setProperty('--ws',  state.scale);
-        el.style.transform = `translate(-50%, -50%) scale(${_sx}, ${state.scale})`;
+        el.style.transform = `translate(calc(-50% + ${offsetX}px), calc(-50% + ${offsetY}px)) scale(${sx}, ${state.scale})`;
         highlightGhost(curPxX, curPxY);
     };
 
@@ -2587,11 +2591,19 @@ function startDrag(key, el, startEvent, isTouch, alreadyActivated = false) {
         document.removeEventListener('touchmove', onMove);
         document.removeEventListener('touchend',  onEnd);
         el.classList.remove('dragging');
-        el.style.transition = '';
         hideGhosts();
-        if (!moved) return;
+        if (!moved) { el.style.transition = ''; return; }
+
+        // Snap: commit snapped position to left/top, reset transform
         const zone = ZONES[nearestZoneIdx(curPxX, curPxY)];
         state.widgetPos[key] = { x: zone.x, y: zone.y };
+        // Apply snap position instantly to left/top, then let transform spring back
+        el.style.transition = 'none';
+        el.style.left = zone.x + '%';
+        el.style.top  = zone.y + '%';
+        // Force reflow so the new left/top is read before we re-enable transition
+        el.getBoundingClientRect();
+        el.style.transition = '';
         positionWidget(key);
         save();
     };
